// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`direction renders 0 1`] = `
Array [
  .c0 {
  direction: 0;
}

<div
    className="c0"
  />,
  .c0 {
  direction: 0;
}

<div
    className="c0"
  />,
  .c0 {
  direction: 0;
}

<div
    className="c0"
  />,
  .c0 {
  direction: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`direction renders function 1`] = `
Array [
  .c0 {
  direction: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  direction: has;
}

<div
    className="c0"
  />,
  .c0 {
  direction: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  direction: has;
}

<div
    className="c0"
  />,
]
`;

exports[`direction renders invalid theme path 1`] = `
Array [
  .c0 {
  direction: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  direction: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  direction: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  direction: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`direction renders negative number 1`] = `
Array [
  .c0 {
  direction: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  direction: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  direction: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  direction: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`direction renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    direction: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    direction: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    direction: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    direction: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    direction: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    direction: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    direction: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    direction: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    direction: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    direction: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    direction: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    direction: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    direction: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    direction: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    direction: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    direction: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`direction renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    direction: July;
  }
}

@media April {
  .c0 {
    direction: August;
  }
}

@media January {
  .c0 {
    direction: September;
  }
}

@media April {
  .c0 {
    direction: November;
  }
}

@media June {
  .c0 {
    direction: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    direction: July;
  }
}

@media April {
  .c0 {
    direction: August;
  }
}

@media January {
  .c0 {
    direction: September;
  }
}

@media April {
  .c0 {
    direction: November;
  }
}

@media June {
  .c0 {
    direction: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    direction: January;
  }
}

@media April {
  .c0 {
    direction: December;
  }
}

@media January {
  .c0 {
    direction: April;
  }
}

@media April {
  .c0 {
    direction: May;
  }
}

@media June {
  .c0 {
    direction: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    direction: January;
  }
}

@media April {
  .c0 {
    direction: December;
  }
}

@media January {
  .c0 {
    direction: April;
  }
}

@media April {
  .c0 {
    direction: May;
  }
}

@media June {
  .c0 {
    direction: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`direction renders postitive number 1`] = `
Array [
  .c0 {
  direction: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  direction: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  direction: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  direction: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`direction renders string 1`] = `
Array [
  .c0 {
  direction: July;
}

<div
    className="c0"
  />,
  .c0 {
  direction: July;
}

<div
    className="c0"
  />,
  .c0 {
  direction: June;
}

<div
    className="c0"
  />,
  .c0 {
  direction: June;
}

<div
    className="c0"
  />,
]
`;

exports[`direction renders valid theme path 1`] = `
Array [
  .c0 {
  direction: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  direction: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  direction: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  direction: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
